@@ -1,5 +1,10 @@
 2004-05-17  Laurent Sansonetti  <lrz@gnome.org>
 
+	* lib/alexandria/book.rb:
+	
+	Fixed encoding problems in the Amazon provider,
+	which seems to encode strings in UTF-8 twice (?!). 
+
 	* lib/alexandria.rb:
 
 	Sets $DEBUG if ENV['DEBUG'] is defined.
